--- a/index.html
+++ b/index.html
@@ -1,74 +1,61 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>MasterUno - Bomba Edition 4 Players</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+<title>MasterUno - Bomba Edition</title>
+<link rel="stylesheet" href="style.css">
+<script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body>
 
-<!-- --- START SCREEN --- -->
+<!-- START SCREEN / IMPOSTAZIONI -->
 <div id="startScreen">
     <div class="main-box">
         <h1 class="logo-title">MASTER UNO</h1>
+        <div class="menu-section">
+            <input type="text" id="playerNameInput" placeholder="Inserisci il tuo nome">
+            <select id="numPlayers">
+                <option value="2">2 Giocatori</option>
+                <option value="3">3 Giocatori</option>
+                <option value="4">4 Giocatori</option>
+            </select>
+            <select id="swapRule">
+                <option value="0">Scambio automatico carte (0)</option>
+                <option value="7">Scegli con chi scambiare (7)</option>
+            </select>
+        </div>
+        <div class="menu-section">
+            <div id="playBotBtn" class="btn-yellow">Gioca contro Computer</div>
+            <div id="connectBtn" class="btn-white">Multiplayer</div>
+        </div>
         <div class="menu-section">
             <div id="myPeerId" class="peer-display">----</div>
             <div id="copyBtn" class="btn-yellow">Copia il tuo ID</div>
         </div>
         <div class="menu-section">
-            <input type="text" id="friendIdInput" placeholder="Inserisci ID Amico">
-            <div id="connectBtn" class="btn-white">Connettiti e Gioca</div>
-        </div>
-        <div class="menu-section">
-            <div id="playBotBtn" class="btn-yellow">Gioca contro Bot</div>
+            <input type="text" id="friendIdInput" placeholder="ID Amico (Multiplayer)">
         </div>
     </div>
 </div>
 
-<!-- --- GAME AREA --- -->
+<!-- GAME AREA -->
 <div id="gameArea" class="hidden">
-
-    <!-- INDICATORE TURNO -->
     <div id="turnIndicator">CARICAMENTO...</div>
-
-    <!-- GIOCATORE ALTO -->
-    <div id="playerTop" class="player-row">
-        <div id="playerTopBadge" class="gold-badge">AVVERSARIO: 7</div>
-        <div id="playerTopHand" class="hand"></div>
+    <div id="opponentsArea"></div>
+    <div id="centerArea">
+        <div id="deck" class="card-back-classic">MAZZO</div>
+        <div id="discardPile"></div>
     </div>
-
-    <!-- LATERALI -->
-    <div class="middle-row">
-        <div id="playerLeft" class="player-side">
-            <div id="playerLeftBadge" class="gold-badge">SINISTRA: 7</div>
-            <div id="playerLeftHand" class="hand vertical-hand"></div>
-        </div>
-
-        <!-- CENTRO: MAZZO E SCARTI -->
-        <div id="centerArea">
-            <div id="deck" class="card-back-classic">MAZZO</div>
-            <div id="discardPile"></div>
-        </div>
-
-        <div id="playerRight" class="player-side">
-            <div id="playerRightBadge" class="gold-badge">DESTRA: 7</div>
-            <div id="playerRightHand" class="hand vertical-hand"></div>
-        </div>
-    </div>
-
-    <!-- GIOCATORE BASSO -->
-    <div id="playerBottom" class="player-row">
-        <div id="playerBadge" class="gold-badge">TU: 7</div>
+    <div id="playerArea">
+        <div id="playerBadge" class="gold-badge"></div>
         <div id="playerHand" class="hand"></div>
     </div>
-
     <button id="masterUnoBtn" class="hidden">MASTER UNO!</button>
 </div>
 
-<!-- --- COLOR PICKER --- -->
+<!-- COLOR PICKER -->
 <div id="colorPicker" class="hidden">
     <div class="picker-box">
         <h3>Scegli Colore</h3>
@@ -81,7 +68,7 @@
     </div>
 </div>
 
-<!-- --- END SCREEN --- -->
+<!-- END SCREEN -->
 <div id="endScreen" class="hidden">
     <div class="main-box">
         <h1 id="endTitle" class="end-title">VITTORIA!</h1>
@@ -92,6 +79,9 @@
         </div>
     </div>
 </div>
+
+<!-- TOAST ALERTS -->
+<div id="toast-container"></div>
 
 <script src="script.js"></script>
 </body>
