--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
 <title>MasterUno — Bomba Edition</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito:wght@700;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
@@ -14,232 +13,169 @@
 </head>
 <body>
 
-<!-- ═══════════════════════════════════════════════ LOGIN SCREEN ══ -->
+<!-- LOGIN -->
 
 <div id="loginScreen" class="screen active">
-  <div class="login-bg">
-    <div class="bg-card c1"></div>
-    <div class="bg-card c2"></div>
-    <div class="bg-card c3"></div>
-    <div class="bg-card c4"></div>
+  <div class="floating-cards">
+    <div class="fc fc1"></div><div class="fc fc2"></div>
+    <div class="fc fc3"></div><div class="fc fc4"></div>
   </div>
   <div class="login-box">
-    <div class="logo-wrap">
-      <span class="logo-master">MASTER</span>
-      <span class="logo-uno">UNO</span>
+    <div class="brand">
+      <span class="brand-master">MASTER</span><span class="brand-uno">UNO</span>
+      <div class="brand-sub">BOMBA EDITION</div>
     </div>
-    <p class="logo-sub">BOMBA EDITION</p>
-    <div class="field-group">
-      <label class="field-label">NICKNAME</label>
+    <div class="form-field">
+      <div class="form-label">NICKNAME</div>
       <input type="text" id="loginName" placeholder="Il tuo nome..." maxlength="16" autocomplete="off">
     </div>
-    <div class="field-group">
-      <label class="field-label">PASSWORD</label>
+    <div class="form-field">
+      <div class="form-label">PASSWORD</div>
       <input type="password" id="loginPass" placeholder="Password..." maxlength="32">
     </div>
-    <button class="btn-login" id="loginBtn">ENTRA NEL GIOCO</button>
-    <p class="login-note">Nessun account? Scrivi nome + password e sarà creato.</p>
+    <button class="btn-primary" id="loginBtn">ENTRA NEL GIOCO</button>
+    <div class="login-hint">Prima volta? Scrivi nome + password per creare l'account.</div>
   </div>
 </div>
 
-<!-- ═══════════════════════════════════════════════ LOBBY SCREEN ══ -->
+<!-- LOBBY -->
 
 <div id="lobbyScreen" class="screen">
-
-  <!-- Header -->
-
-  <div class="lobby-header">
-    <div class="lobby-player-tag" id="lobbyPlayerTag">PLAYER</div>
-    <div class="lobby-title">MASTER<span>UNO</span></div>
-    <button class="btn-gear" id="settingsBtn" title="Impostazioni">⚙️</button>
+  <div class="lobby-topbar">
+    <div class="topbar-tag" id="lobbyPlayerTag">PLAYER</div>
+    <div class="topbar-logo">MASTER<span>UNO</span></div>
+    <button class="icon-btn" id="settingsBtn">⚙️</button>
   </div>
-
-  <!-- Main card -->
-
-  <div class="lobby-card">
-
-```
-<!-- Il tuo ID -->
-<div class="id-section">
-  <div class="id-label">IL TUO CODICE</div>
-  <div class="id-value" id="myPeerId">——</div>
-  <button class="btn-copy-id" id="copyBtn">📋 Copia &amp; Condividi</button>
-</div>
-
-<div class="lobby-divider">— oppure —</div>
-
-<!-- Connettiti -->
-<div class="connect-section">
-  <input type="text" id="friendIdInput" placeholder="Codice amico..." class="input-code" autocomplete="off">
-  <button class="btn-connect" id="connectBtn">🔗 CONNETTI</button>
-</div>
-
-<div class="lobby-divider">— oppure —</div>
-
-<!-- Bot -->
-<button class="btn-bot" id="playBotBtn">🤖 GIOCA vs COMPUTER</button>
-```
-
+  <div class="lobby-scroll">
+    <div class="lobby-card">
+      <div class="section-label">IL TUO CODICE</div>
+      <div class="peer-code" id="myPeerId">——</div>
+      <button class="btn-copy" id="copyBtn">📋 Copia &amp; Condividi</button>
+    </div>
+    <div class="sep-text">— connettiti a un amico —</div>
+    <div class="lobby-card">
+      <div class="connect-row">
+        <input type="text" id="friendIdInput" placeholder="Codice amico..." class="input-code" autocomplete="off">
+        <button class="btn-blue" id="connectBtn">🔗 CONNETTI</button>
+      </div>
+    </div>
+    <div class="sep-text">— oppure —</div>
+    <button class="btn-green big" id="playBotBtn">🤖 GIOCA VS COMPUTER</button>
+    <div class="lobby-status" id="lobbyStatus">In attesa di connessione...</div>
   </div>
-
-  <!-- Footer status -->
-
-  <div class="lobby-status" id="lobbyStatus">In attesa di connessione...</div>
-
 </div>
 
-<!-- ═══════════════════════════════════════════════ SETTINGS PANEL ══ -->
+<!-- IMPOSTAZIONI -->
 
 <div id="settingsPanel" class="side-panel">
-  <div class="panel-header">
+  <div class="panel-head">
     <span>⚙️ IMPOSTAZIONI</span>
-    <button class="btn-close-panel" id="closeSettings">✕</button>
+    <button class="icon-btn" id="closeSettings">✕</button>
   </div>
   <div class="panel-body">
-
-```
-<div class="setting-block">
-  <div class="setting-title">👥 NUMERO GIOCATORI</div>
-  <div class="setting-desc">Quante persone al tavolo (gli umani mancanti saranno bot)</div>
-  <div class="radio-group" id="numPlayersGroup">
-    <label class="radio-pill active"><input type="radio" name="np" value="2" checked> 2</label>
-    <label class="radio-pill"><input type="radio" name="np" value="3"> 3</label>
-    <label class="radio-pill"><input type="radio" name="np" value="4"> 4</label>
+    <div class="sblock">
+      <div class="sblock-title">👥 GIOCATORI AL TAVOLO</div>
+      <div class="sblock-desc">I posti liberi vengono riempiti da bot</div>
+      <div class="radio-row" id="numPlayersGroup">
+        <label class="rpill active" data-val="2"><input type="radio" name="np" value="2" checked>2</label>
+        <label class="rpill" data-val="3"><input type="radio" name="np" value="3">3</label>
+        <label class="rpill" data-val="4"><input type="radio" name="np" value="4">4</label>
+      </div>
+    </div>
+    <div class="sblock">
+      <div class="sblock-title">🔄 REGOLA 0 — Scambio automatico</div>
+      <div class="sblock-desc">Quando giochi uno 0, tutti passano le carte al giocatore successivo</div>
+      <label class="tog"><input type="checkbox" id="rule0"><span class="tog-track"></span></label>
+    </div>
+    <div class="sblock">
+      <div class="sblock-title">🤝 REGOLA 7 — Scegli con chi scambiare</div>
+      <div class="sblock-desc">Quando giochi un 7, scegli con quale giocatore vuoi scambiare la mano</div>
+      <label class="tog"><input type="checkbox" id="rule7"><span class="tog-track"></span></label>
+    </div>
+    <div class="sblock">
+      <div class="sblock-title">🎣 PESCA A STRASCIO</div>
+      <div class="sblock-desc">I +2 e +4 si impilano: il prossimo pesca tutto lo stack accumulato</div>
+      <label class="tog"><input type="checkbox" id="ruleStack" checked><span class="tog-track"></span></label>
+    </div>
+    <div class="sblock">
+      <div class="sblock-title">🃏 MULTI-CARTA stesso numero</div>
+      <div class="sblock-desc">Nel tuo turno puoi giocare più carte con lo stesso numero di fila</div>
+      <label class="tog"><input type="checkbox" id="ruleMulti"><span class="tog-track"></span></label>
+    </div>
+    <div class="sblock rules-box">
+      <div class="sblock-title">📋 REGOLE BASE</div>
+      <ul class="rules-ul">
+        <li>Abbina per colore o numero alla carta in cima</li>
+        <li>Wild 🎨: scegli il colore che vuoi</li>
+        <li>+4: solo se non hai il colore attivo</li>
+        <li>Dì MASTERUNO! con 2 carte, altrimenti +2</li>
+        <li>Vince chi esaurisce le carte per primo</li>
+      </ul>
+    </div>
   </div>
 </div>
+<div class="panel-bg" id="panelBg"></div>
 
-<div class="setting-block">
-  <div class="setting-title">🔄 REGOLA SCAMBIO 0</div>
-  <div class="setting-desc">Quando giochi uno 0, tutti scambiano le carte in senso orario</div>
-  <label class="toggle-switch">
-    <input type="checkbox" id="rule0">
-    <span class="toggle-slider"></span>
-  </label>
-</div>
-
-<div class="setting-block">
-  <div class="setting-title">🤝 REGOLA SCAMBIO 7</div>
-  <div class="setting-desc">Quando giochi un 7, scegli con chi scambiare le carte</div>
-  <label class="toggle-switch">
-    <input type="checkbox" id="rule7">
-    <span class="toggle-slider"></span>
-  </label>
-</div>
-
-<div class="setting-block">
-  <div class="setting-title">🎣 PESCA A STRASCIO</div>
-  <div class="setting-desc">Puoi impilare +2 e +4: il prossimo riceve tutto lo stack accumulato</div>
-  <label class="toggle-switch">
-    <input type="checkbox" id="ruleStack" checked>
-    <span class="toggle-slider"></span>
-  </label>
-</div>
-
-<div class="setting-block">
-  <div class="setting-title">🃏 MULTI-CARTA</div>
-  <div class="setting-desc">Nel tuo turno puoi giocare tutte le carte con lo stesso numero in sequenza</div>
-  <label class="toggle-switch">
-    <input type="checkbox" id="ruleMulti">
-    <span class="toggle-slider"></span>
-  </label>
-</div>
-
-<div class="setting-block rules-classic">
-  <div class="setting-title">📋 REGOLE CLASSICHE</div>
-  <ul class="rules-list">
-    <li>Abbina per colore o numero alla carta sul tavolo</li>
-    <li>Wild: scegli tu il colore</li>
-    <li>+4: solo se non hai il colore. Attacca gli stack</li>
-    <li>Di' MASTERUNO! quando hai 2 carte, altrimenti +2</li>
-    <li>Vince chi finisce le carte per primo</li>
-  </ul>
-</div>
-```
-
-  </div>
-</div>
-<div class="panel-overlay" id="panelOverlay"></div>
-
-<!-- ═══════════════════════════════════════════════ GAME AREA ══ -->
+<!-- GIOCO -->
 
 <div id="gameArea" class="screen">
-
-  <!-- Top bar -->
-
-  <div class="game-topbar">
-    <div id="turnIndicator" class="turn-text">CARICAMENTO...</div>
-    <button class="btn-gear small" id="chatToggleBtn" title="Chat">💬</button>
+  <div class="game-bar">
+    <div id="turnIndicator" class="turn-pill">CARICAMENTO...</div>
+    <button class="icon-btn" id="chatToggleBtn">💬</button>
   </div>
-
-  <!-- Avversari -->
-
   <div id="opponentsArea"></div>
-
-  <!-- Centro tavolo -->
-
   <div id="centerArea">
-    <div id="deck" class="card-back-classic deck-btn">
-      <span>MASTER</span><span>UNO</span>
-    </div>
+    <div id="deck" class="card-back deck-click"><span>MASTER</span><span>UNO</span></div>
     <div id="discardPile"></div>
-    <div id="colorIndicator" class="color-indicator"></div>
+    <div id="colorDot" class="color-dot"></div>
   </div>
-
-  <!-- Mano giocatore -->
-
   <div id="playerArea">
-    <div id="playerInfo" class="player-info-bar">
-      <span id="playerBadge" class="player-badge">TU: 7</span>
-    </div>
-    <div id="playerHand" class="hand player-hand"></div>
+    <span id="playerBadge" class="player-badge">TU: 7</span>
+    <div id="playerHand" class="hand"></div>
   </div>
-
-  <!-- Bottone MasterUno -->
-
-<button id="masterUnoBtn" class="btn-masteruno hidden">🔥 MASTER UNO!</button>
-
+  <button id="masterUnoBtn" class="btn-masteruno hidden">🔥 MASTER UNO!</button>
 </div>
 
-<!-- ═══════════════════════════════════════════════ COLOR PICKER ══ -->
+<!-- SCELTA COLORE -->
 
-<div id="colorPicker" class="fullscreen-overlay hidden">
+<div id="colorPicker" class="overlay hidden">
   <div class="picker-box">
-    <h3>SCEGLI COLORE</h3>
+    <div class="picker-title">SCEGLI COLORE</div>
     <div class="pick-grid">
-      <div class="pick red" onclick="setWildColor('red')">🔴</div>
-      <div class="pick blue" onclick="setWildColor('blue')">🔵</div>
-      <div class="pick green" onclick="setWildColor('green')">🟢</div>
+      <div class="pick red"    onclick="setWildColor('red')">🔴</div>
+      <div class="pick blue"   onclick="setWildColor('blue')">🔵</div>
+      <div class="pick green"  onclick="setWildColor('green')">🟢</div>
       <div class="pick yellow" onclick="setWildColor('yellow')">🟡</div>
     </div>
   </div>
 </div>
 
-<!-- ═══════════════════════════════════════════════ SWAP PICKER ══ -->
+<!-- SCAMBIO 7 -->
 
-<div id="swapPicker" class="fullscreen-overlay hidden">
+<div id="swapPicker" class="overlay hidden">
   <div class="picker-box">
-    <h3>CON CHI SCAMBI?</h3>
-    <div id="swapTargets" class="swap-targets"></div>
+    <div class="picker-title">CON CHI SCAMBI?</div>
+    <div id="swapTargets"></div>
   </div>
 </div>
 
-<!-- ═══════════════════════════════════════════════ CHAT ══ -->
+<!-- CHAT -->
 
 <div id="chatPanel" class="chat-panel hidden">
-  <div class="chat-header">
+  <div class="chat-head">
     <span>💬 CHAT</span>
-    <button id="chatCloseBtn">✕</button>
+    <button class="icon-btn" id="chatCloseBtn">✕</button>
   </div>
-  <div id="chatMessages" class="chat-messages"></div>
-  <div class="emoji-bar">
-    <span class="emoji-btn" onclick="sendEmoji('🔥')">🔥</span>
-    <span class="emoji-btn" onclick="sendEmoji('😂')">😂</span>
-    <span class="emoji-btn" onclick="sendEmoji('😤')">😤</span>
-    <span class="emoji-btn" onclick="sendEmoji('🎉')">🎉</span>
-    <span class="emoji-btn" onclick="sendEmoji('💀')">💀</span>
-    <span class="emoji-btn" onclick="sendEmoji('👀')">👀</span>
-    <span class="emoji-btn" onclick="sendEmoji('🤡')">🤡</span>
-    <span class="emoji-btn" onclick="sendEmoji('⚡')">⚡</span>
+  <div id="chatMessages" class="chat-msgs"></div>
+  <div class="emoji-row">
+    <span class="emo" onclick="sendEmoji('🔥')">🔥</span>
+    <span class="emo" onclick="sendEmoji('😂')">😂</span>
+    <span class="emo" onclick="sendEmoji('😤')">😤</span>
+    <span class="emo" onclick="sendEmoji('🎉')">🎉</span>
+    <span class="emo" onclick="sendEmoji('💀')">💀</span>
+    <span class="emo" onclick="sendEmoji('👀')">👀</span>
+    <span class="emo" onclick="sendEmoji('🤡')">🤡</span>
+    <span class="emo" onclick="sendEmoji('⚡')">⚡</span>
   </div>
   <div class="chat-input-row">
     <input type="text" id="chatInput" placeholder="Scrivi..." maxlength="80">
@@ -247,30 +183,23 @@
   </div>
 </div>
 
-<!-- ═══════════════════════════════════════════════ CARD DRAW ANIMATION ══ -->
+<!-- ANIMAZIONE CARTA -->
 
-<div id="drawAnimCard" class="draw-anim-card hidden">
-  <span>MASTER</span><span>UNO</span>
-</div>
+<div id="drawAnim" class="draw-anim hidden"><span>MASTER</span><span>UNO</span></div>
 
-<!-- ═══════════════════════════════════════════════ END SCREEN ══ -->
+<!-- FINE PARTITA -->
 
 <div id="endScreen" class="screen">
   <div class="end-box">
     <div class="end-icon" id="endIcon">🏆</div>
-    <h1 id="endTitle" class="end-title">VITTORIA!</h1>
-    <p id="endSubtitle" class="end-sub">Ottima partita!</p>
-    <div class="end-stats" id="endStats"></div>
-    <button class="btn-login" id="playAgainBtn" style="margin-top:20px">🔄 GIOCA ANCORA</button>
-    <button class="btn-white-end" id="exitBtn">🚪 MENU PRINCIPALE</button>
+    <div class="end-title" id="endTitle">VITTORIA!</div>
+    <div class="end-sub" id="endSubtitle"></div>
+    <button class="btn-primary" id="playAgainBtn">🔄 RIVINCITA</button>
+    <button class="btn-ghost" id="exitBtn">🚪 MENU PRINCIPALE</button>
   </div>
 </div>
 
-<!-- Toast container -->
-
 <div id="toast-container"></div>
-
 <script src="script.js"></script>
-
 </body>
 </html>
